@startuml digrammacprogettazione
title Smart Home diagramma di progettazione delle classi
skinparam linetype ortho

package "Organizzazioni" {
    class Zona <<entity>> {
        - id: str
        - nome: str
        - sogliaZona: float
        - orarioZona: time 
        - orarioDisattivazione: time
        - idAttuatori: list
        - idSensore: str
        + getId(Zona): str
        + getNome(Zona): str
        + getOrarioZona(Zona): time
        + getOrarioDisattivazione(Zona): time
        + getSogliaZona(Zona): float
        + getIdAttuatori(Zona): list
        + getIdSensore(Zona): str
        + impostaSoglia(float): void
        + associaAttuatore(str): void
        + rimuoviAttuatore(str): void    
    }
    class Scenario <<entity>> {
        - id: str
        - nome: str
        - sogliaScenario: float
        - orarioScenario: time
        - orarioDisattivazione: time
        - idAttuatori: list
        - idSensore: str
        + getId(Scenario): str
        + getNome(Scenario): str
        + getOrarioScenario(Scenario): time
        + getOrarioDisattivazione(Scenario): time
        + getSogliaScenario(Scenario): float
        + getIdAttuatori(Scenario): list
        + getIdSensore(Scenario): str
        + impostaSoglia(float): void
        + associaAttuatore(str): void
        + rimuoviAttuatore(str): void
    }
}

package "Log"{

    class Log <<entity>> {
        - orario: time
        - errori: list

        +getOrarioLog(Log): time
        + getErrori(Log): list
    }
}

package "Dispositivi" {
    abstract class Dispositivo <<entity>> {
        - id: str
        -tipo: str
        + getId(Dispositivo): str
        + getTipo(Dispositivo): str
    }
    class Sensore <<entity>> extends Dispositivo {
        - soglia: list
        + setSoglia(float): void
        + getSoglia(): list
        + misurazione(): float
    }
    class Attuatore <<entity>> extends Dispositivo {
        - orarioAttivazione: time
        - statoAttuatore: bool
        + setOrario(orarioAttivazione): void
        + getStato(Attuatore): bool
        + getOrario(Attuatore): time
        + setStato(bool): void
        +cambiaStato(): void
    }

}

package "Gestione" {
    class GestoreZone <<control>> {
        + creaZona(): Zona
        + visualizzaZona(Zona)
        + modifcaZona(id, nuovoNome): str
        + eliminaZona(Zona)
        + impostaAutomazioneSensore()
        + associaAttuatoreZona()
        + rimuoviAttuatoreDaZona()
        + impostaProgramazioneOraria()
        + calcolaPotenzialiAttuatori()
    }
    class GestoreScenari <<control>>  {
        + creaScenario(): Scenario
        + visualizzaScenario(Scenario)
        + modifcaScenario(id, nuovoNome): str
        + eliminaScenario(Scenario)
        + impostaAutomazioneSensore()
        + associaAttuatoreScenario()
        + rimuoviAttuatoreDaScenario()
        + impostaProgramazioneOraria()
        + checkAutomazioniPrioritarie()
    }
    class GestoreDati <<control>>  {
        + eseguiBackup(str): void
        + recuperaContenutoBackup(GestoreDati): str
    }
    class GestoreUtenti <<control>> {
        + creaAccount(): Account
        + login()
        + eliminaAccount(Account)
    }
    class GestoreDispositivi <<control>>  {
        + aggiungiDispositivo(): Dispositivo
        + configuraDispositivo(Dispositivo)
        + rimuoviDispositivo(Dispositivo)
        + visualizzaDispositivo(Dispositivo)
        + checkAttuatori()
        + checkSensori()
        + lista(): list
    }
    class GestoreTempo <<control>>{
        + checkOrario(getOrario)
    }
}

class Timer <<entity>>{
    getTime(): time
}

    class Utente <<entity>> {
    -id: str
    -nome: str
    -passowrd: str
    -tipo: str
    + getId(Utente): str
    + getNome(Utente): str
    + getPassword(Utente): str
    + getTipo(Utente): str
    }



class Form <<boundary>> {
    + gestisciZone()
    + gestisciScenari()
    + gestisciUtenti()
    + gestisciDispositivi()
    + gestisciTempo()
    + segnalaErrore():str
}



Utente --> Form : usa

Form "1" o-down- "1" GestoreZone
Form "1" o-down- "1" GestoreScenari
Form "1" o-down- "1" GestoreUtenti
Form "1" o-down- "1" GestoreDispositivi
Form "1" o-down- "1" GestoreDati

GestoreZone "1" *-- "*" Zona
GestoreScenari "1" *-- "*" Scenario
GestoreDispositivi "1" *-- "*" Dispositivo
GestoreDati "1" *-- "*" Log

Zona "1" o-- "*" Dispositivo
Scenario "1" o-- "*" Dispositivo

Timer "1" --* "1" GestoreTempo
Form "1" o-- "1" GestoreTempo


@enduml